sumo/tests/duarouter/alternatives/style1_input/errors/xml/no_begin/errors.duarouter
Error: Expected comment or processing instruction
 In file 'input_alts.rou.xml.alt'
 At line/column 6/4.

Quitting (on error).
